# cesium

./: .codecov.yml  .coveragerc  .drone.yml  .flake8  .git-blame-ignore-revs  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  EEG_Example.ipynb  LICENSE.txt  MANIFEST.in  Makefile  README  README.md  RELEASE.txt  TODO.md  azure-pipelines.yml  build_rf_model.py  celery_tasks.py  cfg.py  custom_exceptions.py  custom_feature_tools.py  disco_tools.py  docker_extract_custom_feats.py  error_logs.txt  generate_ipynb.py  github_deploy_key.enc  lc_tools.py  log.py  mltsp.yaml.example  nginx.conf  parallel_processing.py  predict_class.py  pyproject.toml  requirements.docs.txt  requirements.readthedocs.txt  requirements.txt  run_in_docker_container.py  (+5 more)
.drone/: build.sh  coverage_build.sh  deploy_docs.sh  drone_notes.txt  header.py  stop_docker.sh  systems_check.sh  travis_funcs.sh  travis_install.sh  travis_script.sh  travis_test.sh
.travis/: deploy_docs.sh  travis_funcs.sh  travis_install.sh  travis_script.sh
Flask/: flask_app.py
TCP/: setup.py
cesium/: __init__.py  _patch_celery.py  build_model.py  celery_app.py  celery_tasks.py  cesium.yaml.example  config.py  custom_exceptions.py  custom_feature_tools.py  data_management.py  dtw_dag.py  featureset.py  featurize.py  featurize_tools.py  predict.py  science_feature_tools.py  setup.py  time_series.py  transformation.py  util.py  version.py
cesium_app/: __init__.py  cesium.yaml.example  config.py  custom_exceptions.py  custom_feature_tools.py  docker_util.py  flask_app.py  util.py
doc/: Makefile  conf.py  examples.rst  index.rst  install.md
docker_scripts/: docker_build_model.py  docker_extract_custom_feats.py  docker_featurize.py  docker_predict.py  extract_custom_feats.py  launch.py  run_disco_test.py
examples/: EEG_Example.ipynb  EEG_Example.md  (+3 more)
(+1349 files in other folders)
